--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <style>
   /* Make the image fully responsive */
   .crou{
-      width: 52%;
+      width: 700px;
       height: 300px;
       margin-left: 302px;
       margin-top: -518px;
@@ -538,7 +538,7 @@
     
     </div>
 
-<div class="layout_crou">
+
     <div class="crou">
     <div id="demo" class="carousel slide" data-ride="carousel">
 
@@ -571,18 +571,19 @@
       </a>
     </div>
   </div>
-  <div class="vuaghe">
-    <img src="img/vuaghe.png" alt="" width="345" height="170">
- </div>
-<div class="trumlap">
-    <img src="img/trumlap.png" alt="" width="345" height="170">
-</div>
-</div>
+      
+
   <div class="ytb">
     <iframe width="280" height="175" src="https://www.youtube.com/embed/1YqpZkeXr8I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="sld">
                 <img src="img/slides-1.png" alt="" width="285" height="175">
+            </div>
+            <div class="vuaghe">
+                <img src="img/vuaghe.png" alt="" width="345" height="170">
+             </div>
+            <div class="trumlap">
+                <img src="img/trumlap.png" alt="" width="345" height="170">
             </div>
             <div class="giamgia">
               <img src="img/slides-2.png" alt="" width="285" height="175">
