my first project

--- a/cart/index.html
+++ b/cart/index.html
@@ -54,7 +54,7 @@
         </div>
             <i class="ti-vector"></i>
         <div class="signin">
-             <p class="signup"><a href="signup/signup.html" class="sign">Đăng nhập</a>/<a href="login/login.html" class="sign">Đăng ký</a></p>
+             <p class="signup"><a href="file:///D:/BTWeb/signup/signup.html" class="sign">Đăng nhập</a>/<a href="file:///D:/BTWeb/login/login.html" class="sign">Đăng ký</a></p>
              <i class="ti-user"></i>
         </div>
         <div class="cart">
