--- a/signup/signup.html
+++ b/signup/signup.html
@@ -36,7 +36,7 @@
                  </div>
                      <i class="ffq ti-vector"></i>
                  <div class="signin">
-                      <p class="signup"><a href="" class="sign-a">Đăng nhập</a>/<a href="/login/login.html" class="sign-b">Đăng ký</a></p>
+                      <p class="signup"><a href="" class="sign-a">Đăng nhập</a>/<a href="file:///D:/BTWeb/login/login.html" class="sign-b">Đăng ký</a></p>
                       <i class="ffk ti-user"></i>
                  </div>
                  <div class="cart">
@@ -105,6 +105,9 @@
              </div>
              </div>
          </div>
+
+    
+
      <div class="main">
  
          <!-- <form action="" method="POST" class="form" id="form-1">
@@ -163,6 +166,12 @@
          </form>
         </div>
    
+
+        <div class="home-img">
+         <a href="file:///D:/BTWeb/index.html"><img src="img/home.png" alt="" width="50px" height="50px" id="home_img"></a> 
+       </div>
+
+
          <div class="foter">
              <div class="top"></div>
              <div class="kn">
