--- a/login/login.html
+++ b/login/login.html
@@ -36,7 +36,7 @@
                 </div>
                     <i class="ffq ti-vector"></i>
                 <div class="signin">
-                     <p class="signup"><a href="/signup/signup.html" class="sign-a">Đăng nhập</a>/<a href="" class="sign-b">Đăng ký</a></p>
+                     <p class="signup"><a href="file:///D:/BTWeb/signup/signup.html" class="sign-a">Đăng nhập</a>/<a href="" class="sign-b">Đăng ký</a></p>
                      <i class="ffk ti-user"></i>
                 </div>
                 <div class="cart">
@@ -162,6 +162,12 @@
   
           <button class="form-submit">Đăng nhập</button>
         </form> -->
+
+
+
+        <div class="home-img">
+          <a href="file:///D:/BTWeb/index.html"><img src="img/home.png" alt="" width="50px" height="50px" id="home_img"></a> 
+        </div>
   
         <div class="foter">
             <div class="top"></div>
