my files prject

--- a/login/login.html
+++ b/login/login.html
@@ -36,7 +36,7 @@
                 </div>
                     <i class="ffq ti-vector"></i>
                 <div class="signin">
-                     <p class="signup"><a href="file:///D:/BTWeb/signup/signup.html" class="sign-a">Đăng nhập</a>/<a href="" class="sign-b">Đăng ký</a></p>
+                     <p class="signup"><a href="https://prominhquan.github.io/Worldd/signup/signup.html" class="sign-a">Đăng nhập</a>/<a href="" class="sign-b">Đăng ký</a></p>
                      <i class="ffk ti-user"></i>
                 </div>
                 <div class="cart">
@@ -166,7 +166,7 @@
 
 
         <div class="home-img">
-          <a href="file:///D:/BTWeb/index.html"><img src="img/home.png" alt="" width="50px" height="50px" id="home_img"></a> 
+          <a href="https://prominhquan.github.io/Worldd/?fbclid=IwAR3jZBaEpp-DE8I3SUIuBSDJrJEBo0fkeZuL-LmezfbalUG6Fznyn3dRDY8"><img src="img/home.png" alt="" width="50px" height="50px" id="home_img"></a> 
         </div>
   
         <div class="foter">
