--- a/signup/signup.html
+++ b/signup/signup.html
@@ -36,7 +36,7 @@
                  </div>
                      <i class="ffq ti-vector"></i>
                  <div class="signin">
-                      <p class="signup"><a href="" class="sign-a">Đăng nhập</a>/<a href="file:///D:/BTWeb/login/login.html" class="sign-b">Đăng ký</a></p>
+                      <p class="signup"><a href="" class="sign-a">Đăng nhập</a>/<a href="https://prominhquan.github.io/Worldd/login/login.html" class="sign-b">Đăng ký</a></p>
                       <i class="ffk ti-user"></i>
                  </div>
                  <div class="cart">
@@ -168,7 +168,7 @@
    
 
         <div class="home-img">
-         <a href="file:///D:/BTWeb/index.html"><img src="img/home.png" alt="" width="50px" height="50px" id="home_img"></a> 
+         <a href="https://prominhquan.github.io/Worldd/?fbclid=IwAR3jZBaEpp-DE8I3SUIuBSDJrJEBo0fkeZuL-LmezfbalUG6Fznyn3dRDY8"><img src="img/home.png" alt="" width="50px" height="50px" id="home_img"></a> 
        </div>
 
 
